@@ -381,7 +381,9 @@ extern volatile u_long handler_pkts;	/* number of pkts received by handler */
 extern u_long	io_timereset;		/* time counters were reset */
 
 /* ntp_io.c */
-extern  int	disable_dynamic_updates;
+extern int	disable_dynamic_updates;/* scan interfaces once only */
+extern int	nonlocal_v4_addr_up;	/* should we try IPv4 pool? */
+extern int	nonlocal_v6_addr_up;	/* should we try IPv6 pool? */
 extern u_int	sys_ifnum;		/* next .ifnum to assign */
 extern endpt *	any_interface;		/* IPv4 wildcard */
 extern endpt *	any6_interface;		/* IPv6 wildcard */
